--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Uselessly Good-Looking™️",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack --mode production",
     "storybook": "start-storybook"
   },
@@ -17,14 +17,18 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@storybook/react": "^5.2.0",
+    "@types/jest": "^24.0.18",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.5",
+    "@types/react-test-renderer": "^16.9.0",
     "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "babel-loader": "^8.0.6",
     "eslint": "^6.1.0",
     "eslint-plugin-react": "^7.14.3",
+    "jest": "^24.9.0",
+    "react-test-renderer": "^16.9.0",
     "typescript": "^3.5.3",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6"
