--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,10 @@
 	"plugins": [
 			"@babel/proposal-class-properties",
 			"@babel/proposal-object-rest-spread"
-	]
+	],
+	"env": {
+		"test": {
+			"plugins": ["transform-es2015-modules-commonjs"]
+		}
+	}
 }
